fixing layout issues

--- a/app/assets/stylesheets/blacklight.css.scss
+++ b/app/assets/stylesheets/blacklight.css.scss
@@ -22,9 +22,6 @@ body {
  height: 100%
 }
 
-html { height: 100%;}
-
-
 #documents .document, .articles .document {
   margin-top: 6px;
   padding: 6px;
